2010-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c (loadpath_handler):  Have "show loadpath" should
	also list the environmental variable GNUPLOT_PS_DIR.
	Bug #2933345

2010-01-15  <ottxor@users.sourceforge.net>

	* configure.in src/Makefile.am demo/Makefile.am.in:
	"make check" needs help if we did ./configure --program-suffix=FOO
	In this case make a temporary symlink so that 'make check' can find
	gnuplot_x11.
	Bug #2926141

2010-01-12  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/win/winmain.c (MyVFPrintF): Microsoft Visual C does not use
	va_copy() and va_end().

2010-01-12  <ottxor@users.sourceforge.net>

	* configure.in share/Makefile.am:  Do not install LaTeX support files
	if there is no latex on the system.  Add configuration option
	--without-latex
	Bug #2928310

2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705

	* src/plot2d.c (eval_plots): In generating points for a function plot,
	only x and y were guaranteed to be initialized. Now to be safe we
	initialize all fields.
	Bug #2930705

	* src/plot2d.c (store2d_point): steps, fsteps, and histeps were 
	incorrectly auto-scaling to yhigh (which is really variable color).
	Bug #2929314

2010-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/plotstyles.gnu demo/boxplot.dem
	src/datafile.c src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graphics.c src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c:

	New plot style "with boxplot" and corresponding "set style boxplot".

2010-01-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.595

2010-01-10  <ottxor@users.sourceforge.net>

	* share/Makefile.am:  Do not install x11 appdefaults file if no
	X11 support is selected.  Bug #2928271
